  with Versions of NuttX at 7.9 and beyond (2015-03-31).
* NxWidgets::CNxServer:  More renaming: up_lcdinitialize->board_lcd_initialize,
  up_lcdgetdev->board_lcd_getdev, up_lcduninitialize->board_lcd_uninitialize
  (2015-04-04).
* NxWidgets:: INxWindow, CNxWindow, CBgWindow, CNxTkWindow, CNxToolbar,
  CGraphicsPort: Add a capped parameter to all drawLine() methods.  Pass on
  to NX nx_drawline() and NXTK nxtk_drawlinetoolbar() and nxtk_drawlinewindow()
  functions (2015-04-05).

1.16 2016-06-01 Gregory Nutt <gnutt@nuttx.org>

* NxWM::CTouchscreen: When boardctl() fails, need to print errno not the
  returned value which will always be -1 (2015-04-16).
* NxWidgets::CNxServer:  Correct use of the BOARDIOC_GRAPHICS_SETUP
  boardctl() call (2015-04-16).
* CListBox unit test:  Should use RAND_MAX, not MAX_RAND (2015-04-16).
* The NxWidgets/ directory has been removed from the NuttX GIT repository
  and now stands alone in its own repository (2015-06-27).
* Framebuffer driver parameters have changed.  This introduces an
  incompatibility with versions of NuttX prior to 7.16 (2016-04-14).
* UnitTests: Add Make.defs files to all UnitTests directories.  This is
  required by the current apps/Makefile.  Hmmm..  This means that no one
  has built the NxWidgets packages in the last several realeases!
  (2016-04-23).
* UnitTests: Add some default definitions to handle the (unusual) case
  where 'make clean' is called with no .config or Make.defs file installed
  (2016-05-10).

1.17 2016-xx-xx Gregory Nutt <gnutt@nuttx.org>

* UnitTests: Back conditional logic out of UnitTest Make.defs files.  It
  does not belong there and causes link failures like "Cannot find nxwm_main"
  (2016-06-05).
* Change dbg() and vdbg() to err() and info() (2016-06-11).
* Change some *err() message to *info() messages if what was a *dbg()
  message does not indicate and error condition (2016-06-14).
* Add _ to front of debug macros (2016-06-16).
