@@ -157,6 +157,8 @@ else
 context:
 endif
 
+preconfig:
+
 # Standard housekeeping targets
 
 .depend: Makefile $(SRCS)
